src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@out1-spB1.snap
---
source: src/tests/window_opening.rs
description: "open on output: headless-1\nset parent: B1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
